--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           solution-file: packed-solutions/con_core.zip
           solution-folder: solutions/con_core/src
           solution-type: Both
-      - uses: action/upload-artifact@v2
+      - uses: actions/upload-artifact@v2
         with:
           name: packed-solutions
           path: packed-solutions
