added workflow to commit solution

--- a/.github/commit-core.yml
+++ b/.github/commit-core.yml
@@ -4,6 +4,10 @@ name: Commit Core
 
 # Controls when the workflow will run
 on:
+  push:
+    paths:
+      include:
+        - solutions/**
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
