--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,6 +6,8 @@ name: CI / CD
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
+    paths:
+      - solutions/**
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
