--- a/.github/workflows/commit-admissions.yml
+++ b/.github/workflows/commit-admissions.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   export-unpack-commit:
-    environment: development
+    environment: dev-admissions
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
