--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,11 +26,14 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - uses: microsoft/powerplatform-actions/pack-solution@v0
+      - name: pack con_core
+        uses: ./.github/actions/pack-solution
         with:
-          solution-file: packed-solutions/con_core.zip
-          solution-folder: solutions/con_core/src
-          solution-type: Both
+          name: con_core
+      - name: pack con_admissions
+        uses: ./.github/actions/pack-solution
+        with:
+          name: con_admissions
       - uses: actions/upload-artifact@v3
         with:
           path: packed-solutions
